--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -39,12 +39,14 @@
       padding: 0;
     }
     .date-header {
-      background: #212121;
-      padding: 10px;
-      position: sticky;
-      top: 0;
-      z-index: 50;
-    }
+    background: var(--secondary-color);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 50;
+    padding: 5px 0;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+}
     .month-nav {
         display: flex;
         justify-content: center;
@@ -251,144 +253,6 @@
 
 
 
-
-
-
-
-/* Menu Toggle Button */
-.menu-btn {
-        position: fixed;
-        top: 1px;
-        left: 10px;
-        background: var(--secondary-color);
-        border: none;
-        color: var(--text-color);
-        font-size: 24px;
-        cursor: pointer;
-        padding: 8px;
-        z-index: 202; /* Above overlay */
-        transition: color 0.3s ease, background 0.3s ease;
-    }
-    .menu-btn:hover {
-        color: var(--primary-color);
-        background: var(--light-bg);
-    }
-
-    /* Side Menu */
-    .side-menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 250px;
-        height: 100%;
-        background: var(--secondary-color);
-        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
-        transform: translateX(-100%);
-        transition: transform 0.3s ease-in-out;
-        z-index: 201; /* Above overlay, below menu-btn */
-        display: flex;
-        flex-direction: column;
-    }
-    .side-menu.open {
-        transform: translateX(0);
-    }
-
-
-/* Overlay */
-.overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 0.3s ease, visibility 0.3s ease;
-        z-index: 200; /* Below menu and menu-btn */
-    }
-    .overlay.active {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    /* Content Blur */
-    .content-blur {
-        transition: filter 0.3s ease;
-    }
-    body.menu-open .content-blur {
-        filter: blur(3px); /* Apply blur when menu is open */
-    }
-
-
-
-
-
-
-
-.menu-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    background: var(--light-bg);
-    border-bottom: 1px solid #444754;
-}
-.menu-header h2 {
-    font-size: 18px;
-    color: var(--text-color);
-}
-.close-btn {
-    background: none;
-    border: none;
-    color: var(--text-color);
-    font-size: 24px;
-    cursor: pointer;
-    padding: 5px;
-}
-.close-btn:hover {
-    color: var(--primary-color);
-}
-.menu-items {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    flex-grow: 1;
-}
-.menu-items li {
-    border-bottom: 1px solid #444754;
-}
-.menu-link {
-    display: block;
-    padding: 15px 20px;
-    color: var(--text-color);
-    text-decoration: none;
-    font-size: 16px;
-    transition: background 0.3s ease, color 0.3s ease;
-}
-.menu-link:hover {
-    background: var(--light-bg);
-    color: var(--primary-color);
-}
-
-/* Ensure content shifts when menu is open */
-body.menu-open {
-    overflow: hidden;
-}
-
-/* Responsive adjustments */
-@media (max-width: 600px) {
-    .side-menu {
-        width: 200px;
-    }
-    .menu-link {
-        font-size: 14px;
-        padding: 12px 15px;
-    }
-    .menu-header h2 {
-        font-size: 16px;
-    }
-}
 
 
 
@@ -890,10 +754,36 @@ body.menu-open {
 
 
 
+/* Logout Button ****************************************************/
+.logout-container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 150;
+}
 
+#logoutBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
 
+.logout-icon {
+    width: 30px;
+    height: 30px;
+    filter: invert(100%) brightness(150%);
+    transition: transform 0.3s ease;
+}
 
+.logout-icon:hover {
+    transform: scale(1.1);
+}
 
+/* Logout Button ****************************************************/
 
 
 
@@ -908,22 +798,13 @@ body.menu-open {
 
 </head>
     <body>
-        <nav id="sideMenu" class="side-menu">
-            <div class="menu-header">
-                <h2>Admin Menu</h2>
-                <button id="closeMenu" class="close-btn" aria-label="Close Menu">×</button>
-            </div>
-            <ul class="menu-items">
-                <li><a href="#" id="taskSettingsLink" class="menu-link">Create a Task</a></li>
-                <li><a href="#" id="marketDashLink" class="menu-link">Create a Reward</a></li>
-                <li><a href="#" id="userManagementLink" class="menu-link">User Management</a></li>
-                <li><a href="#" id="logoutLink" class="menu-link">Logout</a></li>
-            </ul>
-        </nav>
-        <div id="overlay" class="overlay"></div>
         <div class="date-header">
-            <button id="menuToggle" class="menu-btn" aria-label="Toggle Menu">☰</button>
             <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" class="profile-icon" id="profileIcon" alt="Select User" />
+            <div id="logoutContainer" class="logout-container">
+              <button id="logoutBtn" aria-label="Logout" title="Logout">
+                  <img src="/BeeMazing-Y1/mobile/1-Home/Logout.png" alt="Logout" class="logout-icon" />
+              </button>
+          </div>
             <div class="month-nav">
                 <button id="prevMonth"><</button>
                 <span id="monthLabel">Month</span>
@@ -1503,6 +1384,20 @@ permissionModal.addEventListener("click", (e) => {
 
 
 
+// Logout Button
+const logoutBtn = document.getElementById("logoutBtn");
+logoutBtn.addEventListener("click", () => {
+    // Only remove login session info
+    localStorage.removeItem("isAdmin");
+    localStorage.removeItem("userData");
+    localStorage.removeItem("adminPassword");
+    // Keep currentAdminEmail as per home.js
+    window.location.href = "/BeeMazing-Y1/login.html";
+});
+
+
+
+
 // Set active state
 document.querySelectorAll('.footer a').forEach(link => {
     const currentPath = window.location.pathname.replace(/\/$/, '');
@@ -1515,57 +1410,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 });
 
  
-// Side Menu Toggle
-const menuToggle = document.getElementById('menuToggle');
-    const sideMenu = document.getElementById('sideMenu');
-    const closeMenu = document.getElementById('closeMenu');
-    const overlay = document.getElementById('overlay');
-    const contentElements = document.querySelectorAll('.date-header, #taskContainer, .footer');
-
-    function openMenu() {
-        sideMenu.classList.add('open');
-        overlay.classList.add('active');
-        document.body.classList.add('menu-open');
-        contentElements.forEach(el => el.classList.add('content-blur'));
-    }
-
-    function closeMenuFn() {
-        sideMenu.classList.remove('open');
-        overlay.classList.remove('active');
-        document.body.classList.remove('menu-open');
-        contentElements.forEach(el => el.classList.remove('content-blur'));
-    }
-
-    menuToggle.addEventListener('click', openMenu);
-    closeMenu.addEventListener('click', closeMenuFn);
-    overlay.addEventListener('click', closeMenuFn);
-
-    // Prevent clicks inside the menu from closing it
-    sideMenu.addEventListener('click', (e) => {
-        e.stopPropagation();
-    });
-
-
-// Set side menu links
-const taskSettingsLink = document.getElementById('taskSettingsLink');
-        const marketDashLink = document.getElementById('marketDashLink');
-        const userManagementLink = document.getElementById('userManagementLink');
-        const logoutLink = document.getElementById('logoutLink');
-
-        if (adminEmail && userName) {
-            taskSettingsLink.href = `/BeeMazing-Y1/mobile/3-Tasks/tasks.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-            marketDashLink.href = `/BeeMazing-Y1/mobile/4-Market/market.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-            userManagementLink.href = `/BeeMazing-Y1/mobile/1-Home/home.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-            logoutLink.href = `/BeeMazing-Y1/login.html`;
-        }
-
-        // Clear localStorage on logout to match home.html
-        logoutLink.addEventListener('click', () => {
-            localStorage.removeItem('isAdmin');
-            localStorage.removeItem('userData');
-            localStorage.removeItem('adminPassword');
-            // Keep currentAdminEmail as per home.js
-        });
 
 
 
