--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -24,6 +24,16 @@
             --border-dark: #444754; /* 👈 Add this if not already present */
             --card-bg: #2A2B32;
         }
+
+
+        #taskContainer {
+  margin-top: 90px;
+  padding-bottom: 80px;
+}
+
+
+
+
         body {
             font-family: 'Poppins', Arial, sans-serif;
             background-color: var(--light-bg);
