--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -38,6 +38,21 @@
       margin: 0;
       padding: 0;
     }
+
+    .header {
+    background: linear-gradient(135deg, var(--primary-color), #FFB300);
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: var(--header-height);
+    z-index: 100;
+}
+
     .date-header {
     background: var(--secondary-color);
     position: fixed;
