--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -30,6 +30,11 @@
     --border-dark: #444754; /* Added */
 }
 
+#taskContainer {
+  margin-top: 130px;
+  padding-bottom: 80px;
+}
+
 
     body {
       font-family: 'Poppins', sans-serif;
