--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -666,7 +666,7 @@
 
               
 
-            <p>Welcome to the hive of <span id="userName"></span>.</p>
+            <p>Good Luck!<span id="userName"></span>.</p>
 
 
 
