--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -523,7 +523,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>1</span>
+            <span>11</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -610,46 +610,51 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
     }
 
     try {
-        const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
-        if (!response.ok) throw new Error(`HTTP error ${response.status}`);
-        const result = await response.json();
-        const tasks = result.tasks || [];
-        for (const task of tasks) {
-            if (!task.title || !task.date || !Array.isArray(task.users)) {
-                console.warn("Found invalid task, deleting:", task);
-                await deleteInvalidTask(task);
-            }
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    if (!response.ok) {
+        const errorData = await response.json().catch(() => ({ error: `HTTP error ${response.status}` }));
+        throw new Error(`Failed to fetch tasks: ${errorData.error || response.statusText}`);
+    }
+    const result = await response.json();
+    const tasks = result.tasks || [];
+    for (const task of tasks) {
+        if (!task.title || !task.date || !Array.isArray(task.users)) {
+            console.warn("Found invalid task, deleting:", task);
+            await deleteInvalidTask(task);
+        }
+    }
+
+    const taskList = document.getElementById("taskList");
+    taskList.innerHTML = "";
+
+    const visibleTasks = filterTasksForDate(tasks, selectedDate);
+
+    if (visibleTasks.length === 0) {
+        taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+        return;
+    }
+
+    visibleTasks.forEach((task) => {
+        const taskDiv = document.createElement("div");
+        taskDiv.className = "task-item";
+        taskDiv.dataset.taskTitle = task.title;
+        taskDiv.dataset.taskDate = task.date;
+
+        if (!Array.isArray(task.users) || task.users.length === 0) {
+            task.users = ["Unknown"];
         }
 
-        const taskList = document.getElementById("taskList");
-        taskList.innerHTML = "";
+        let taskHTML = `<strong>${task.title}</strong>`;
+        let turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
 
-        const visibleTasks = filterTasksForDate(tasks, selectedDate);
-
-        if (visibleTasks.length === 0) {
-            taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
-            return;
-        }
-
-        visibleTasks.forEach((task) => {
-            const taskDiv = document.createElement("div");
-            taskDiv.className = "task-item";
-            taskDiv.dataset.taskTitle = task.title;
-            taskDiv.dataset.taskDate = task.date;
-
-            if (!Array.isArray(task.users) || task.users.length === 0) {
-                task.users = ["Unknown"];
-            }
-
-            let taskHTML = `<strong>${task.title}</strong>`;
-            let turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
-
-            if (task.settings?.includes("Rotation")) {
-                if (typeof mixedTurnData !== 'function') {
-    console.error(`mixedTurnData is not defined for task: ${task.title}. Check if taskrotations.js loaded and inspect console for errors.`);
-    taskHTML += `<br><em style="color:#ff4444;">Error: Rotation calculation unavailable. See console for details.</em>`;
-} else {
+        if (task.settings?.includes("Rotation")) {
+            if (typeof mixedTurnData !== 'function') {
+                console.error(`mixedTurnData is not defined for task: ${task.title}. Check if taskrotations.js loaded and inspect console for errors.`);
+                taskHTML += `<br><em style="color:#ff4444;">Error: Rotation calculation unavailable. See console for details.</em>`;
+            } else {
+                try {
                     turnData = mixedTurnData(task, selectedDate);
+                    console.log(`Rotation task "${task.title}" on ${selectedDate}:`, turnData);
                     const currentTurn = turnData.turns.find(t => !t.isCompleted && !t.isPending)?.user || "All done!";
                     const nextTurnIndex = turnData.turns.findIndex(t => !t.isCompleted && !t.isPending) + 1;
                     const nextUser = nextTurnIndex < turnData.turns.length ? turnData.turns[nextTurnIndex]?.user : "—";
@@ -659,12 +664,17 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                         <br>Next: ${nextUser}
                         <div class="task-progress">Progress: ${turnData.completedCount}/${turnData.requiredTimes}</div>
                     `;
+                } catch (err) {
+                    console.error(`Error processing Rotation task "${task.title}" on ${selectedDate}:`, err);
+                    taskHTML += `<br><em style="color:#ff4444;">Error: Unable to calculate rotation. See console for details.</em>`;
                 }
-            } else if (task.settings?.includes("Individual")) {
-                if (typeof individualTurnData !== 'function') {
-                    console.error(`individualTurnData is not defined for task: ${task.title}`);
-                    taskHTML += `<br><em style="color:#ff4444;">Error: Progress calculation unavailable</em>`;
-                } else {
+            }
+        } else if (task.settings?.includes("Individual")) {
+            if (typeof individualTurnData !== 'function') {
+                console.error(`individualTurnData is not defined for task: ${task.title}`);
+                taskHTML += `<br><em style="color:#ff4444;">Error: Progress calculation unavailable</em>`;
+            } else {
+                try {
                     turnData = individualTurnData(task, selectedDate);
                     taskHTML += `<br><em>Individual Task</em>`;
                     task.users.forEach(user => {
@@ -674,41 +684,45 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                         const check = count >= required ? '✅' : '';
                         taskHTML += `<br>${user}: ${count}/${required} ${check}`;
                     });
+                } catch (err) {
+                    console.error(`Error processing Individual task "${task.title}" on ${selectedDate}:`, err);
+                    taskHTML += `<br><em style="color:#ff4444;">Error: Unable to calculate progress. See console for details.</em>`;
                 }
-            } else {
-                taskHTML += `<br><em style="color:#aaa;">No rotation</em>`;
             }
+        } else {
+            taskHTML += `<br><em style="color:#aaa;">No rotation</em>`;
+        }
 
-            taskDiv.innerHTML = taskHTML + `<div class="delete-btn">Delete</div>`;
+        taskDiv.innerHTML = taskHTML + `<div class="delete-btn">Delete</div>`;
 
-            taskDiv.addEventListener("click", async (e) => {
-                if (taskDiv.dataset.swiping === "true") {
-                    taskDiv.dataset.swiping = "false";
-                    return;
-                }
-                
-                if (!e.target.classList.contains("delete-btn")) {
-                    const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
-                    const latestResult = await latest.json();
-                    const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
-                    if (latestTask) showTaskDetails(latestTask);
-                }
-            });
-
-            taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
-                e.stopPropagation();
-                if (confirm("Are you sure you want to delete this task?")) {
-                    await deleteTaskFromBackend(task.title, task.date);
-                    loadTasksForDate(selectedDate);
-                }
-            });
-
-            taskList.appendChild(taskDiv);
-            enableSwipeToDelete(taskDiv);
+        taskDiv.addEventListener("click", async (e) => {
+            if (taskDiv.dataset.swiping === "true") {
+                taskDiv.dataset.swiping = "false";
+                return;
+            }
+            
+            if (!e.target.classList.contains("delete-btn")) {
+                const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+                const latestResult = await latest.json();
+                const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+                if (latestTask) showTaskDetails(latestTask);
+            }
         });
-    } catch (err) {
-        console.error("Error loading tasks:", err);
-        document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
+
+        taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
+            e.stopPropagation();
+            if (confirm("Are you sure you want to delete this task?")) {
+                await deleteTaskFromBackend(task.title, task.date);
+                loadTasksForDate(selectedDate);
+            }
+        });
+
+        taskList.appendChild(taskDiv);
+        enableSwipeToDelete(taskDiv);
+    });
+} catch (err) {
+    console.error("Error loading tasks:", err, { adminEmail, selectedDate });
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
     }
 }
 
