--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -533,7 +533,8 @@ body {
         </a>
     </div>
 
-    <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
+    <script src="/BeeMazing-Y1/shared/taskrotations.js"></script>
+
 
     <script>
 
