--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -523,7 +523,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>11</span>
+            <span>111</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -617,6 +617,8 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
 
 
         // Load tasks for a specific date
+
+
         async function loadTasksForDate(selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (!adminEmail) {
@@ -667,7 +669,6 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                     console.error(`mixedTurnData is not defined for task: ${task.title}. Check if taskrotations.js loaded and inspect console for errors.`);
                     taskHTML += `<br><em style="color:#ff4444;">Error: Rotation calculation unavailable. See console for details.</em>`;
                 } else {
-                    // Validate task data before calling mixedTurnData
                     let rotationError = null;
                     if (!task.date || typeof task.date !== "string") {
                         rotationError = "Invalid or missing task date";
@@ -689,11 +690,13 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                             } else {
                                 const currentTurn = turnData.turns.find(t => !t.isCompleted && !t.isPending)?.user || "All done!";
                                 const nextTurnIndex = turnData.turns.findIndex(t => !t.isCompleted && !t.isPending) + 1;
-                                const nextUser = nextTurnIndex < turnData.turns.length ? turnData.turns[nextTurnIndex]?.user : "—";
+                                const nextUser = nextTurnIndex < turnData.turns.length ? turnData.turns[nextTurnIndex]?.user : turnData.turns[0]?.user || "—";
+                                const nextNextUser = nextTurnIndex + 1 < turnData.turns.length ? turnData.turns[nextTurnIndex + 1]?.user : turnData.turns[1]?.user || turnData.turns[0]?.user || "—";
+                                const nextText = `${nextUser} - ${nextNextUser}`;
                                 taskHTML += `
                                     <br><em>Rotation Task</em>
                                     <br>Turn: ${currentTurn}
-                                    <br>Next: ${nextUser}
+                                    <br>Next: ${nextText}
                                     <div class="task-progress">Progress: ${turnData.completedCount}/${turnData.requiredTimes}</div>
                                 `;
                             }
@@ -759,6 +762,10 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
         document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
     }
 }
+
+
+
+
 
 
 
